Bug 1700508 - Fix assertion failure in nsHtml5StreamParser.h. r=mkmelin

Thanks to hsivonen for the suggestion.

Differential Revision: https://phabricator.services.mozilla.com/D110168

--HG--
extra : amend_source : 6cc457edd582e265af4015117e79860c7c77cf63